edit style crumb and contactus

--- a/about.html
+++ b/about.html
@@ -286,7 +286,7 @@
                                         </ul>
                                     </li>
                                     <li>
-                                        <a href="contact.html"> Contact </a>
+                                        <a href="contactus.html"> Contact </a>
                                     </li>
                                     <li class="dropdown cart-list margin-0-sm">
                                         <a class="dropdown-toggle" data-toggle="dropdown" href="javascript:void(0);"><span class="d-lg-none"> Shopping Cart </span><i class="waituk-icon-cart m-marker"></i></a>
