--- a/contactus.html
+++ b/contactus.html
@@ -56,8 +56,8 @@
             <li><a href="#">Product</a></li>
             <li><a href="#">Pricing</a></li>
             <li><a href="#">Integrations</a></li>
-            <li><a href="contact.html">Company</a></li>
-            <li><a href="contact.html">info@letsingo.com</a></li>
+            <li><a href="contactus.html">Company</a></li>
+            <li><a href="contactus.html">info@letsingo.com</a></li>
         </ul>
         <div class="divider-border"><span class="sr-only"></span></div>
         <div class="p-3">
