--- a/pricing.html
+++ b/pricing.html
@@ -55,8 +55,8 @@
             <li><a href="#">Product</a></li>
             <li><a href="#">Pricing</a></li>
             <li><a href="#">Integrations</a></li>
-            <li><a href="contact.html">Company</a></li>
-            <li><a href="contact.html">info@letsingo.com</a></li>
+            <li><a href="contactus.html">Company</a></li>
+            <li><a href="contactus.html">info@letsingo.com</a></li>
         </ul>
         <div class="divider-border"><span class="sr-only"></span></div>
         <div class="p-3">
@@ -102,7 +102,7 @@
                                                 <div class="col-lg-6 col-autoheight clearfix">
                                                     <div class="widget-default clearfix">
                                                         <ul class="s-list s-list-pl s-list-mb-10 no-padding">
-                                                            <li><a href="contact.html"><i class="waituk-icon-contact-book"></i> Contact US </a></li>
+                                                            <li><a href="contactus.html"><i class="waituk-icon-contact-book"></i> Contact US </a></li>
                                                             <li><a href="ourMission.html"><i class="waituk-icon-ios-star"></i> Our Mission </a></li>
                                                             <li><a href="gettingStarted.html"><i class="waituk-icon-question-circle-outline"></i> Getting Started </a></li>
                                                             <li><a href="rinkuacademy.html"><i class="waituk-icon-edit-pen-1"></i> Rinku Academy </a></li>
