--- a/gettingStarted.html
+++ b/gettingStarted.html
@@ -187,13 +187,16 @@
                                         <li class="breadcrumb-item"><a href="index.html"> Home </a></li>
                                         <li class="breadcrumb-item"><a href="#"> Company </a></li>
                                         <li class="breadcrumb-item"><a href="#"> About  </a></li>
-                                        <li class="breadcrumb-item active"> <a href=""> ContactUs </a></li>
+                                        <li class="breadcrumb-item active"> <a href=""> GETTING STARTED </a></li>
                                     </ol>
                                 </div>
                                 <div class="visual-text visual-center">
                                     <div  class="visual-title">
-                                    <h1>Contact Us</h1>
-                                    <p>Questions? Comments? Thoughts? We’re Here.</p>
+                                    <h1>GETTING STARTED</h1>
+                                    <p>
+                                        Referrals are a powerful tool for driving enterprise marketing and sales growth. 
+See how Referral Automation adds scalability and authenticity.
+                                    </p>
                                     </div>
                                 </div>
                             </div>
@@ -284,15 +287,15 @@
 
                  
                      <!-- Start monoblock -->
-                <section class="monoblock">
+              <section class="monoblock">
                     <div class="container-fluid">
                         <div class="row">
-                            <div class="col-lg-8 m-auto">
+                            <div class="col-lg-8 m-lg-auto col-md-6 col-sm-12">
                                 <div class="block-heading bottom-space text-white ">
                                 <h2 class="block-heading-textleft text-left">ARE YOU READY TO SKYROCKET YOUR EVENT’S ATTENDANCE?</h2>
                         </div>
                     </div>
-                    <div class="col-lg-4 m-auto d-flex justify-content-end">
+                    <div class="col-lg-4 col-md-6 col-sm-12 m-lg-auto d-flex justify-content-lg-end mono-block-btn">
                         <a href="#" class="btn btn-small-font btn-trans-primary btn-deff">Get Started</a>
                     </div>
                     </div>
@@ -304,7 +307,7 @@
             </main>
         </div>
           <!-- footer of the pagse -->
-        <footer class="footer">
+       <footer class="footer">
             <div class="footer-main pb-0">
                 <div class="container-fluid">
                 <div class="content-block">
@@ -325,7 +328,7 @@
                                 </ul>
                             </div>
                         </div>
-                        <div class="col-lg-4 d-flex justify-content-center">
+                        <div class="col-lg-4">
                             <div class="widget-block">
                                 <h4>Discover</h4>
                                 <div class="footer-nav">
@@ -341,7 +344,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-4 d-flex justify-content-center">
+                        <div class="col-lg-4">
                             <div class="widget-block">
                                 <h4>PARTNERS</h4>
                                 <div class="footer-nav">
