--- a/index.html
+++ b/index.html
@@ -768,7 +768,7 @@
                                 </ul>
                             </div>
                         </div>
-                        <div class="col-lg-4 d-flex justify-content-center">
+                        <div class="col-lg-4">
                             <div class="widget-block">
                                 <h4>Discover</h4>
                                 <div class="footer-nav">
@@ -784,7 +784,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-4 d-flex justify-content-center">
+                        <div class="col-lg-4">
                             <div class="widget-block">
                                 <h4>PARTNERS</h4>
                                 <div class="footer-nav">
@@ -805,7 +805,7 @@
                     </div>
                 </div>
             </div>
-        </footer>
+        </footer> 
         <!--/footer of the page -->
     </div>
    <!-- search form wrapper -->
