--- a/rinkuacademy.html
+++ b/rinkuacademy.html
@@ -165,7 +165,7 @@
                     <!-- Start pricing section -->
                     <!-- Start Contact us -->
                     <section class="content-block academy ">
-                        <div class="container">
+                        <div class="container-fluid">
                             <div class="row ">
                                 <div class="col-lg-6 col-sm-12">
                                     <iframe width="560" height="315" src="https://www.youtube.com/embed/i9UYbJ2xMTI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
@@ -189,15 +189,15 @@
 
                  
                      <!-- Start monoblock -->
-                <section class="monoblock">
+              <section class="monoblock">
                     <div class="container-fluid">
                         <div class="row">
-                            <div class="col-lg-8 m-auto">
+                            <div class="col-lg-8 m-lg-auto col-md-6 col-sm-12">
                                 <div class="block-heading bottom-space text-white ">
                                 <h2 class="block-heading-textleft text-left">ARE YOU READY TO SKYROCKET YOUR EVENT’S ATTENDANCE?</h2>
                         </div>
                     </div>
-                    <div class="col-lg-4 m-auto d-flex justify-content-end">
+                    <div class="col-lg-4 col-md-6 col-sm-12 m-lg-auto d-flex justify-content-lg-end mono-block-btn">
                         <a href="#" class="btn btn-small-font btn-trans-primary btn-deff">Get Started</a>
                     </div>
                     </div>
@@ -209,7 +209,7 @@
             </main>
         </div>
           <!-- footer of the pagse -->
-        <footer class="footer">
+       <footer class="footer">
             <div class="footer-main pb-0">
                 <div class="container-fluid">
                 <div class="content-block">
@@ -230,7 +230,7 @@
                                 </ul>
                             </div>
                         </div>
-                        <div class="col-lg-4 d-flex justify-content-center">
+                        <div class="col-lg-4">
                             <div class="widget-block">
                                 <h4>Discover</h4>
                                 <div class="footer-nav">
@@ -246,7 +246,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-4 d-flex justify-content-center">
+                        <div class="col-lg-4">
                             <div class="widget-block">
                                 <h4>PARTNERS</h4>
                                 <div class="footer-nav">
