--- a/how-to-install.html
+++ b/how-to-install.html
@@ -264,7 +264,7 @@
                                 WE’RE HERE TO HELP!</h4>
                            <p class="help-desc">Need a personal-one-on-one with our experts? Pick a time that works with your schedule here: www.ingo.me/schedule.</p>
                             </div>
-                            <div class="d-flex justify-content-around py-5">
+                            <div class="d-lg-flex justify-content-around py-5 box-buttons">
                                 <a href="#" class="btn btn-small-font  btn-deff">InGo HelpDesk</a>
                                 <a href="#" class="btn btn-small-font  btn-deff">Support Request</a>
                                 <a href="#" class="btn btn-small-font  btn-deff">Schedule Kickof</a>
