--- a/product.html
+++ b/product.html
@@ -747,15 +747,15 @@
                 </section>
                 <!-- END Renku make -->
                 <!-- Start monoblock -->
-                <section class="monoblock">
+              <section class="monoblock">
                     <div class="container-fluid">
                         <div class="row">
-                            <div class="col-lg-8 m-auto">
+                            <div class="col-lg-8 m-lg-auto col-md-6 col-sm-12">
                                 <div class="block-heading bottom-space text-white ">
                                 <h2 class="block-heading-textleft text-left">ARE YOU READY TO SKYROCKET YOUR EVENT’S ATTENDANCE?</h2>
                         </div>
                     </div>
-                    <div class="col-lg-4 m-auto d-flex justify-content-end">
+                    <div class="col-lg-4 col-md-6 col-sm-12 m-lg-auto d-flex justify-content-lg-end mono-block-btn">
                         <a href="#" class="btn btn-small-font btn-trans-primary btn-deff">Get Started</a>
                     </div>
                     </div>
@@ -765,7 +765,7 @@
             </main>
         </div>
         <!-- footer of the pagse -->
-        <footer class="footer">
+       <footer class="footer">
             <div class="footer-main pb-0">
                 <div class="container-fluid">
                 <div class="content-block">
@@ -786,7 +786,7 @@
                                 </ul>
                             </div>
                         </div>
-                        <div class="col-lg-4 d-flex justify-content-center">
+                        <div class="col-lg-4">
                             <div class="widget-block">
                                 <h4>Discover</h4>
                                 <div class="footer-nav">
@@ -802,7 +802,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-4 d-flex justify-content-center">
+                        <div class="col-lg-4">
                             <div class="widget-block">
                                 <h4>PARTNERS</h4>
                                 <div class="footer-nav">
