--- a/index.html
+++ b/index.html
@@ -426,11 +426,11 @@
                                 <div class="row">
                                     <div class="col-lg-6 col-sm-12 display-grid wow bounceInLeft" data-wow-duration="2s" data-wow-delay="1s">
                                             <h4 class="save-dev">80% SAVINGS</h4>
-                                            <img src="/img/sections-images/money.png">
+                                            <img src="./img/sections-images/money.png">
                                     </div>
                                     <div class="col-lg-6 col-sm-12 display-grid wow bounceInRight" data-wow-duration="2s" data-wow-delay="1s">
                                         <h4 class="save-dev">30% GROWTH </h4>
-                                        <img src="/img/sections-images/growth.png">
+                                        <img src="./img/sections-images/growth.png">
                                 </div>
                                 </div>
                             </div>
